Add member names.

--- a/ProjectProposal/main.tex
+++ b/ProjectProposal/main.tex
@@ -19,12 +19,12 @@
 \begin{document}
 
 \begin{center}
-\large{CS 444: Project: [Project Title]}\\
-\normal{Your name}
+\large{CS 444: Project: [Watermark Removal]}\\
+\text{Alexander Saff}
 \end{center}
 \vspace{5mm}
 
-\textbf{Team members: NameA(netid), NameB(netid), NameC(netid)}
+\textbf{Team members: Alexander Saff(ars369), Alon Flor(netid), Kaushik A Vakadkar(netid)}
 
 
 %####################
