--- a/ProjectProposal/main.tex
+++ b/ProjectProposal/main.tex
@@ -24,7 +24,7 @@
 \end{center}
 \vspace{5mm}
 
-\textbf{Team members: Alexander Saff(ars369), Alon Flor(netid), Kaushik A Vakadkar(netid)}
+\textbf{Team members: Alexander Saff(ars369), Alon Flor(af656), Kaushik A Vakadkar(kav126)}
 
 
 %####################
