--- a/ProjectProposal/main.tex
+++ b/ProjectProposal/main.tex
@@ -19,12 +19,12 @@
 \begin{document}
 
 \begin{center}
-\large{CS 444 Project:\\Watermark Removal}\\
-\text{Alexander Saff, Alon Flor, Kaushik A Vakadkar}
+\large{CS 536 Project:\\Watermark Removal}\\
+\text{Alexander Saff, Alon Flor, Kaushik Vakadkar}
 \end{center}
 \vspace{5mm}
 
-\textbf{Team members: Alexander Saff(ars369), Alon Flor(af656), Kaushik A Vakadkar(kav126)}
+\textbf{Team members: Alexander Saff (ars369), Alon Flor (af656), Kaushik Vakadkar (kav126)}
 
 
 %####################
