Update to match Google Doc

--- a/ProjectProposal/main.tex
+++ b/ProjectProposal/main.tex
@@ -32,7 +32,7 @@
 
 \begin{sloppypar}
 \textbf{What to solve.}
-The goal of this project is to automatically remove watermarks from images. Watermarks are a common tool used to prevent unlicensed distribution or copying of intellectual property. In this instance, the watermarks are generally logos, text, or both placed over the image. Watermarks may be somewhat transparent or fully opaque, although if they are fully opaque they will usually be somewhat smaller than their translucent counterparts. Watermarks are usually either identifiable because the text and/or logo is made by darkening or lightening the parts of the image underneath the logo/text. Very rarely are translucent watermarks formed by tinting the underlying image to a color other than black or white. While there have been previous attempts to create automated watermark removal tools, our approach is unique because it is the first attempt that we are aware of to make use of transformer blocks. Previous attempts have either not used neural networks at all, utilized convolutional neural networks, or used generative adversarial networks (GANs). Recently transformers have been shown to match CNN performance on vision tasks with better efficiency. Most notable is Google’s recent ViT \cite{dosovitskiy2020image}.
+The goal of this project is to automatically remove watermarks from images. Watermarks are a common tool used to prevent unlicensed distribution or copying of intellectual property. In this instance, the watermarks are generally logos, text, or both placed over the image. Watermarks may be somewhat transparent or fully opaque, although if they are fully opaque they will usually be somewhat smaller than their translucent counterparts. Watermarks are usually either identifiable because the text and/or logo is made by darkening or lightening the parts of the image underneath the logo/text. Very rarely are translucent watermarks formed by tinting the underlying image to a color other than black or white. While there have been previous attempts to create automated watermark removal tools, our approach is unique because it is the first attempt that we are aware of to make use of transformer blocks. Previous attempts have either not used neural networks at all, utilized convolutional neural networks, or used generative adversarial networks (GANs). Recently transformers have been shown to match CNN performance on vision tasks with better efficiency. Most notable is Google’s recent ViT\cite{dosovitskiy2020image}.
 \end{sloppypar}
 
 \begin{sloppypar}
@@ -42,7 +42,8 @@ Our proposed solution is to create a neural network that takes in images and out
 
 \begin{sloppypar}
 \textbf{How to evaluate.}
-The model will be evaluated on how closely the output images match the ground truth on image-watermark combinations that it (the model) has not seen before. Ideally, images are scored only on the difference between pixel values in the region affected by the watermark. The images will be sourced from the CIFAR10 dataset.Pixel values should be averaged across RGB channels and then weighted average over all images according to image class. This will prevent the network from specializing on only one class of the CIFAR10 dataset.
+The model will be evaluated on how closely its output images match the ground truth on image-watermark combinations that it (the model) has not seen before. Ideally, images are scored only on the difference between pixel values in the region affected by the watermark. The images will be sourced from the CIFAR10 dataset, with rotations and watermarks applied to the images as stated above. Pixel values should be averaged across RGB channels and then the weighted average applied over all images according to image class. This will prevent the network from specialising on only one class of the CIFAR10 dataset.
+To prevent overfitting and improve generalization, we will use an 80-10-10 split for training, validation and final evaluation/testing respectively. In addition to data augmentation, we even propose to make use of k-fold cross-validation.
 \end{sloppypar}
 
 \newpage
