Add new references

--- a/ProjectProposal/refs_ahn.bib
+++ b/ProjectProposal/refs_ahn.bib
@@ -1708,3 +1708,41 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+
+@inproceedings{48101,
+title	= {On the Effectiveness of Visible Watermarks},
+author	= {Bill Freeman and Ce Liu and Miki Rubinstein and Tali Dekel},
+year	= {2017}
+}
+
+@INPROCEEDINGS{8579082, 
+author={V. {Lempitsky} and A. {Vedaldi} and D. {Ulyanov}},
+booktitle={2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+title={Deep Image Prior},
+year={2018},
+volume={},
+number={},
+pages={9446-9454},
+doi={10.1109/CVPR.2018.00984}
+}
+
+@misc{rickwierenga,
+      title={GANs for Watermark Removal}, 
+      author={Rick Wierenga},
+      year={2019}
+}
+
+@inproceedings{Krizhevsky2009LearningML,
+  title={Learning Multiple Layers of Features from Tiny Images},
+  author={A. Krizhevsky},
+  year={2009}
+}
+
+@misc{chen2020pretrained,
+      title={Pre-Trained Image Processing Transformer}, 
+      author={Hanting Chen and Yunhe Wang and Tianyu Guo and Chang Xu and Yiping Deng and Zhenhua Liu and Siwei Ma and Chunjing Xu and Chao Xu and Wen Gao},
+      year={2020},
+      eprint={2012.00364},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
