--- a/ProjectProposal/main.tex
+++ b/ProjectProposal/main.tex
@@ -19,7 +19,7 @@
 \begin{document}
 
 \begin{center}
-\large{CS 536 Project:\\Watermark Removal}\\
+\large{CS 536 Project:\\Watermark Removal Using Transformers}\\
 \text{Alexander Saff, Alon Flor, Kaushik Vakadkar}
 \end{center}
 \vspace{5mm}
